--- a/css/style.css
+++ b/css/style.css
@@ -18,42 +18,98 @@ h1{
 }
 
 .bodyContainer{
-	width: 80%;
+	width: 70%;
 	color: white;
 	margin: auto;
 	font-size: 40px;
+	
+}
+#logo{
+	height: inherit;
 }
 
 header, footer{
 	width: 100%;
 	height: 150px;
-	background-color: #F6CA80;
+	/*background-color: #F6CA80;*/
+
 }
 
 main{
 	width: 100%;
-	height: 600px;
-	background-color: #FADEB0;
+	/*height: 600px;*/
+	/*background-color: #FADEB0;*/
+}
+
+main::after{
+	content: "";
+	clear: both;
+	display: table;
 }
 
 nav{
 	width: 22.5%;
-	background: #B0CBFA;
+	/*background: #B0CBFA;*/
 	height: 100%;
 	float: left;
 }
+nav::after{
+	content: "";
+	clear: both;
+	display: table;
+}
 
-section{
+ul li{
+	padding: 50px 0px;
+}
+ul li a{
+	color: white;
+}
+
+.section{
 	width: 55%;
-	background: #B0CBFA;
+	/*background: #80ABF7;*/
 	height: 100%;
 	float: left;
+	font-size: 16px;
+}
+
+section{
+	padding: 50px 50px;
+}
+
+section::after{
+	content: "";
+	clear: both;
+	display: table;
 }
 
 
 aside{
 	width: 22.5%;
-	background: #B0CBFA;
+	padding: 50px 0px;
+	/*background: #B0CBFA;*/
 	height: 100%;
-	float: left;
+	float: right;
 }
+aside::after{
+	content: "";
+	clear: both;
+	display: table;
+}
+ .asideImage{
+	width: 100%;
+ }
+
+
+
+
+
+
+
+
+
+
+
+
+
